# zeta.nvim

./: .gitignore
lib/crates/auth/: Cargo.toml
lib/crates/auth/src/: lib.rs
