[lib]
crate-type = ["cdylib"]

[package]
name = "zeta-auth"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
mlua.workspace = true
rand.workspace = true
rsa.workspace = true
sha2.workspace = true

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
